# ls

./: Cargo.toml
scripts/: control_flow.lils  custom_functions.lils  higher_order_functions.lils  loops.lils  test.calc  test.lils
scripts/aoc-2025-day-1/: solution.lils
src/: constants.rs  data.rs  lexer.rs  main.rs  number.rs  parser.rs
src/expr/: error.rs  mod.rs
src/functions/: array.rs  boolean.rs  higher_order.rs  mod.rs  numeric.rs  other.rs  string.rs
src/utils/: strings.rs
